stderr
FizzBuzz.java:13: error: int cannot be dereferenced
        return number.toString();
                     ^
1 error
